style: add fixed column gap

--- a/src/components/Layout/Layout.scss
+++ b/src/components/Layout/Layout.scss
@@ -13,7 +13,7 @@
   display: grid;
   grid-template-columns: auto 1fr;
   width: 100dvw;
-  column-gap: 10%;
+  column-gap: 50px;
 }
 
 .page {
